SERVER-66433 Backport deadline waiting for overlapping range deletion to finish to pre-v5.1 versions